--- a/src/Components/PortFolioComponent.css
+++ b/src/Components/PortFolioComponent.css
@@ -12,7 +12,7 @@
   height: 300px;
   background-color: #f0f0f0;
 }
-
+/* i want to check */
 .portfolio-card:hover {
   transform: translateY(-5px);
 }
